--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "mongodb": "^4.7.0"
   },
   "type": "module",
   "scripts": {
